// The greeting service definition.
syntax = "proto3";

service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc NewPost (Post) returns (PostConfirmation) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The request message containing a new post.
message Post {
  string userUUID = 1;
  string content = 2;
  string title = 3;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message PostConfirmation {
  string postID = 1;
}